last try, remove from index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/rounded.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <!-- <meta
       name="description"
       content="Passionate about programming, mathematics, and physics. Check out my content about these topics here."
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/website-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>João Vitor Witt</title>
+    <!-- <title>João Vitor Witt</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
